UI changes for Unraid 7.2.

--- a/source/EnhancedSyslogColors.page
+++ b/source/EnhancedSyslogColors.page
@@ -14,9 +14,9 @@ Title="Colors"
 $enhanced_log_cfg = parse_ini_file( "/boot/config/plugins/enhanced.log/enhanced.log.cfg" );
 ?>
 
-<table class="tablesorter shift ups">
-<thead><tr><th>_(Syslog Colors)_</th></tr></thead>
-</table>
+<div class='title shift'>
+	<span style="float:left;">_(Syslog Colors)_</span>
+</div>
 
 <div style="width: 100%; float:left">
 	<form markdown="1" name="enhanced_log_settings" method="POST" action="/update.php" target="progressFrame">
