--- a/source/EnhancedSyslogConfiguration.page
+++ b/source/EnhancedSyslogConfiguration.page
@@ -15,155 +15,168 @@ Title="Configuration"
 define('ENHANCED_LOG_PLUGIN', 'enhanced.log');
 
 $enhanced_log_cfg = parse_ini_file( "/boot/config/plugins/".ENHANCED_LOG_PLUGIN."/enhanced.log.cfg" );
+
+/* Detect Unraid version and assign a CSS class */
+$unraid_version = '';
+if (file_exists('/etc/unraid-version')) {
+	$data = parse_ini_file('/etc/unraid-version');
+	if (!empty($data['version'])) {
+		$unraid_version = $data['version'];
+	}
+}
+
+/* Default to legacy if not detected */
+$title_class = 'legacy';
+
+/* Compare version — 7.2 and newer = latest */
+if (version_compare($unraid_version, '7.2', '>=')) {
+	$title_class = 'latest';
+}
 ?>
+
+<div class='<?=$title_class;?> title shift'>
+	<span>_(Syslog Configuration)_</span>
+</div>
 
 <link rel="stylesheet" href="<?autov("/plugins/".ENHANCED_LOG_PLUGIN."/assets/enhanced-log.css")?>">
 
-<div class='title shift'>
-	<span style="float:left;">_(Syslog Coniguration)_</span>
-</div>
+<form markdown="1" name="enhanced_log_settings" method="POST" action="/update.php" target="progressFrame">
+<input type="hidden" name="#file" value="enhanced.log/enhanced.log.cfg">
 
-<div style="width: 100%; float:left">
-	<form markdown="1" name="enhanced_log_settings" method="POST" action="/update.php" target="progressFrame">
-	<input type="hidden" name="#file" value="enhanced.log/enhanced.log.cfg">
-
-	_(Show All Lines in Log)_?
-	: <select name="TEXT" size="1" class="narrow">
-		<?=mk_option($enhanced_log_cfg['TEXT'], "yes", "_(Yes)_");?>
-		<?=mk_option($enhanced_log_cfg['TEXT'], "no", "_(No)_");?>
-	  </select>
+_(Show All Lines in Log)_?
+: <select name="TEXT" size="1" class="narrow">
+	<?=mk_option($enhanced_log_cfg['TEXT'], "yes", "_(Yes)_");?>
+	<?=mk_option($enhanced_log_cfg['TEXT'], "no", "_(No)_");?>
+  </select>
 
 :enhanced_syslog_show_all_lines_plug:
-	> Set to **Yes** to show all lines in the enhanced log.  Set to **No** to show only highlighted lines.
+> Set to **Yes** to show all lines in the enhanced log.  Set to **No** to show only highlighted lines.
 :end
 
-	_(Number of Lines to Display)_:
-	: <input type="number" name="LINES" class="el-numeric-input" maxlength="4" value="<?=htmlspecialchars($enhanced_log_cfg['LINES']);?>" placeholder="1000" min="1" max="9999">
+_(Number of Lines to Display)_:
+: <input type="number" name="LINES" class="el-numeric-input" maxlength="4" value="<?=htmlspecialchars($enhanced_log_cfg['LINES']);?>" placeholder="1000" min="1" max="9999">
 
 :enhanced_log_number_of_lines_plug:
-	> Number of lines to display in the Enhanced Syslog.  Default is 1000.
+> Number of lines to display in the Enhanced Syslog.  Default is 1000.
 :end
 
-	_(Enable 'Error' Highlighting)_?
-	: <select name="ERRORS" size="1" class="narrow">
-		<?=mk_option($enhanced_log_cfg['ERRORS'], "yes", "_(Yes)_");?>
-		<?=mk_option($enhanced_log_cfg['ERRORS'], "no", "_(No)_");?>
-	  </select>
+_(Enable 'Error' Highlighting)_?
+: <select name="ERRORS" size="1" class="narrow">
+	<?=mk_option($enhanced_log_cfg['ERRORS'], "yes", "_(Yes)_");?>
+	<?=mk_option($enhanced_log_cfg['ERRORS'], "no", "_(No)_");?>
+  </select>
 
 :enhanced_log_enable_error_plug:
-	> Set to **Yes** to enable **Errors** highlighting in the enhanced log.
+> Set to **Yes** to enable **Errors** highlighting in the enhanced log.
 :end
 
-	_(Enable 'Minor Issues' Highlighting)_?
-	: <select name="MINOR_ISSUES" size="1" class="narrow">
-		<?=mk_option($enhanced_log_cfg['MINOR_ISSUES'], "yes", "_(Yes)_");?>
-		<?=mk_option($enhanced_log_cfg['MINOR_ISSUES'], "no", "_(No)_");?>
-	  </select>
+_(Enable 'Minor Issues' Highlighting)_?
+: <select name="MINOR_ISSUES" size="1" class="narrow">
+	<?=mk_option($enhanced_log_cfg['MINOR_ISSUES'], "yes", "_(Yes)_");?>
+	<?=mk_option($enhanced_log_cfg['MINOR_ISSUES'], "no", "_(No)_");?>
+  </select>
 
 :enhanced_log_enable_minor_plug:
-	> Set to **Yes** to enable **Minor Issues** highlighting in the enhanced log.
+> Set to **Yes** to enable **Minor Issues** highlighting in the enhanced log.
 :end
 
-	_(Enable 'Lime Tech' Highlighting)_?
-	: <select name="LIME_TECH" size="1" class="narrow">
-		<?=mk_option($enhanced_log_cfg['LIME_TECH'], "yes", "_(Yes)_");?>
-		<?=mk_option($enhanced_log_cfg['LIME_TECH'], "no", "_(No)_");?>
-	  </select>
+_(Enable 'Lime Tech' Highlighting)_?
+: <select name="LIME_TECH" size="1" class="narrow">
+	<?=mk_option($enhanced_log_cfg['LIME_TECH'], "yes", "_(Yes)_");?>
+	<?=mk_option($enhanced_log_cfg['LIME_TECH'], "no", "_(No)_");?>
+  </select>
 
 :enhanced_log_enable_limetch_plug:
-	> Set to **Yes** to enable **Lime Tech** highlighting in the enhanced log.
+> Set to **Yes** to enable **Lime Tech** highlighting in the enhanced log.
 :end
 
 
-	_(Enable 'Array' Highlighting)_?
-	: <select name="ARRAY" size="1" class="narrow">
-		<?=mk_option($enhanced_log_cfg['ARRAY'], "yes", "_(Yes)_");?>
-		<?=mk_option($enhanced_log_cfg['ARRAY'], "no", "_(No)_");?>
-	  </select>
+_(Enable 'Array' Highlighting)_?
+: <select name="ARRAY" size="1" class="narrow">
+	<?=mk_option($enhanced_log_cfg['ARRAY'], "yes", "_(Yes)_");?>
+	<?=mk_option($enhanced_log_cfg['ARRAY'], "no", "_(No)_");?>
+  </select>
 
 :enhanced_log_enable_array_plug:
-	> Set to **Yes** to enable **Array** highlighting in the enhanced log.
+> Set to **Yes** to enable **Array** highlighting in the enhanced log.
 :end
 
-	_(Enable 'System' Highlighting)_?
-	: <select name="SYSTEM" size="1" class="narrow">
-		<?=mk_option($enhanced_log_cfg['SYSTEM'], "yes", "_(Yes)_");?>
-		<?=mk_option($enhanced_log_cfg['SYSTEM'], "no", "_(No)_");?>
-	  </select>
+_(Enable 'System' Highlighting)_?
+: <select name="SYSTEM" size="1" class="narrow">
+	<?=mk_option($enhanced_log_cfg['SYSTEM'], "yes", "_(Yes)_");?>
+	<?=mk_option($enhanced_log_cfg['SYSTEM'], "no", "_(No)_");?>
+  </select>
 
 :enhanced_log_enable_system_plug:
-	> Set to **Yes** to enable **System** highlighting in the enhanced log.
+> Set to **Yes** to enable **System** highlighting in the enhanced log.
 :end
 
-	_(Enable 'File System' Highlighting)_?
-	: <select name="FILE_SYSTEM" size="1" class="narrow">
-		<?=mk_option($enhanced_log_cfg['FILE_SYSTEM'], "yes", "_(Yes)_");?>
-		<?=mk_option($enhanced_log_cfg['FILE_SYSTEM'], "no", "_(No)_");?>
-	  </select>
+_(Enable 'File System' Highlighting)_?
+: <select name="FILE_SYSTEM" size="1" class="narrow">
+	<?=mk_option($enhanced_log_cfg['FILE_SYSTEM'], "yes", "_(Yes)_");?>
+	<?=mk_option($enhanced_log_cfg['FILE_SYSTEM'], "no", "_(No)_");?>
+  </select>
 
 :enhanced_log_enable_file_system_plug:
-	> Set to **Yes** to enable **File System** highlighting in the enhanced log.
+> Set to **Yes** to enable **File System** highlighting in the enhanced log.
 :end
 
-	_(Enable 'Drive Related' Highlighting)_?
-	: <select name="DRIVE_RELATED" size="1" class="narrow">
-		<?=mk_option($enhanced_log_cfg['DRIVE_RELATED'], "yes", "_(Yes)_");?>
-		<?=mk_option($enhanced_log_cfg['DRIVE_RELATED'], "no", "_(No)_");?>
-	  </select>
+_(Enable 'Drive Related' Highlighting)_?
+: <select name="DRIVE_RELATED" size="1" class="narrow">
+	<?=mk_option($enhanced_log_cfg['DRIVE_RELATED'], "yes", "_(Yes)_");?>
+	<?=mk_option($enhanced_log_cfg['DRIVE_RELATED'], "no", "_(No)_");?>
+  </select>
 
 :enhanced_log_enable_drive_plug:
-	> Set to **Yes** to enable **Drive Related** highlighting in the enhanced log.
+> Set to **Yes** to enable **Drive Related** highlighting in the enhanced log.
 :end
 
-	_(Enable 'Network' Highlighting)_?
-	: <select name="NETWORK" size="1" class="narrow">
-		<?=mk_option($enhanced_log_cfg['NETWORK'], "yes", "_(Yes)_");?>
-		<?=mk_option($enhanced_log_cfg['NETWORK'], "no", "_(No)_");?>
-	  </select>
+_(Enable 'Network' Highlighting)_?
+: <select name="NETWORK" size="1" class="narrow">
+	<?=mk_option($enhanced_log_cfg['NETWORK'], "yes", "_(Yes)_");?>
+	<?=mk_option($enhanced_log_cfg['NETWORK'], "no", "_(No)_");?>
+  </select>
 
 :enhanced_log_enable_network_plug:
-	> Set to **Yes** to enable **Network** highlighting in the enhanced log.
+> Set to **Yes** to enable **Network** highlighting in the enhanced log.
 :end
 
-	_(Enable 'Login' Highlighting)_?
-	: <select name="LOGIN" size="1" class="narrow">
-		<?=mk_option($enhanced_log_cfg['LOGIN'], "yes", "_(Yes)_");?>
-		<?=mk_option($enhanced_log_cfg['LOGIN'], "no", "_(No)_");?>
-	  </select>
+_(Enable 'Login' Highlighting)_?
+: <select name="LOGIN" size="1" class="narrow">
+	<?=mk_option($enhanced_log_cfg['LOGIN'], "yes", "_(Yes)_");?>
+	<?=mk_option($enhanced_log_cfg['LOGIN'], "no", "_(No)_");?>
+  </select>
 
 :enhanced_log_enable_login_plug:
-	> Set to **Yes** to enable **Login** highlighting in the enhanced log.
+> Set to **Yes** to enable **Login** highlighting in the enhanced log.
 :end
 
-	_(Enable 'emhttp' Highlighting)_?
-	: <select name="EMHTTP" size="1" class="narrow">
-		<?=mk_option($enhanced_log_cfg['EMHTTP'], "yes", "_(Yes)_");?>
-		<?=mk_option($enhanced_log_cfg['EMHTTP'], "no", "_(No)_");?>
-	  </select>
+_(Enable 'emhttp' Highlighting)_?
+: <select name="EMHTTP" size="1" class="narrow">
+	<?=mk_option($enhanced_log_cfg['EMHTTP'], "yes", "_(Yes)_");?>
+	<?=mk_option($enhanced_log_cfg['EMHTTP'], "no", "_(No)_");?>
+  </select>
 
 :enhanced_log_enable_emhttp_plug:
-	> Set to **Yes** to enable **emhttp** highlighting in the enhanced log.
+> Set to **Yes** to enable **emhttp** highlighting in the enhanced log.
 :end
 
-	_(Enable 'Other' Highlighting)_?
-	: <select name="OTHER" size="1" class="narrow">
-		<?=mk_option($enhanced_log_cfg['OTHER'], "yes", "_(Yes)_");?>
-		<?=mk_option($enhanced_log_cfg['OTHER'], "no", "_(No)_");?>
-	  </select>
+_(Enable 'Other' Highlighting)_?
+: <select name="OTHER" size="1" class="narrow">
+	<?=mk_option($enhanced_log_cfg['OTHER'], "yes", "_(Yes)_");?>
+	<?=mk_option($enhanced_log_cfg['OTHER'], "no", "_(No)_");?>
+  </select>
 
 :enhanced_log_enable_other_plug:
-	> Set to **Yes** to enable **Other** highlighting in the enhanced log.
+> Set to **Yes** to enable **Other** highlighting in the enhanced log.
 :end
 
 <input type="submit" name="#default" value="_(Default)_">
 : <span class="inline-block">
 	<input type="submit" value='_(Apply)_'><input type="button" value="_(Done)_" onclick="done()">
 </span>
-&nbsp;
 
 :enhancd_log_default_plug:
 	> **Default** resets the Configuration and Colors.  Click **Apply** to save your changes.  Click **Done** when you are finished with your changes.
 :end
-
 </form>
-</div>
