--- a/source/EnhancedSyslogCustom.page
+++ b/source/EnhancedSyslogCustom.page
@@ -15,8 +15,8 @@ $file			= "/boot/config/plugins/enhanced.log/custom_syslog.conf";
 $text			= @file_get_contents($file);
 ?>
 
-<div class='title shift'>
-	<span style="float:left;">_(Custom Syslog Match Strings)_</span>
+<div class='<?=$title_class;?> title shift'>
+	<span>_(Custom Syslog Match Strings)_</span>
 </div>
 
 :enhanced_log_custom_plug:
@@ -35,10 +35,8 @@ $text			= @file_get_contents($file);
 <input type="hidden" name="#raw_file" value="true">
 <input type="hidden" name="#file" value="<?=$file;?>">
 
-&nbsp;
 <textarea spellcheck="false" cols="80" rows="17" maxlength="2048" name="text" style="font-family:bitstream;width:50%;"><?=htmlspecialchars($text);?></textarea>
 
-&nbsp;
 <span class="inline-block">
   <input type="submit" value='_(Apply)_'><input type="button" value="_(Done)_" onclick="done()">
 </span>
