--- a/source/EnhancedSyslogConfiguration.page
+++ b/source/EnhancedSyslogConfiguration.page
@@ -2,11 +2,13 @@ Menu="EnhancedSyslogSettings:1"
 Title="Configuration"
 ---
 <?php
-/* Copyright 2015-2025, Dan Landon.
+/* Copyright 2015-2025 Dan Landon.
  *
  * Permission is granted to use this software for personal, educational, or internal use only.
+ * Commercial use, redistribution, or modification of this software or any derived works
+ * is strictly prohibited without prior written permission.
  *
- * Commercial use, redistribution, or modification of this software or any derived works is strictly prohibited without prior written permission.
+ * THIS SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND.
  */
 ?>
 
