Adjust page size so buttons will not run off the bottom of the page.

--- a/source/EnhancedSyslog.page
+++ b/source/EnhancedSyslog.page
@@ -273,7 +273,7 @@ $(function() {
 
 	<?if ($display['resize']):?>
 	function resize() {
-	  $('pre.up').height(Math.max(window.innerHeight-330,370)).show();
+	  $('pre.up').height(Math.max(window.innerHeight-350, 370)).show();
 	}
 
 	resize();
